--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,6 +54,7 @@ body>div.container {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    gap: 20px;
     margin: 0 !important;
 }
 
