--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,11 @@ body>div.container {
     align-items: center;
     height: 100vh;
     margin: 0 !important;
-    gap: 50px;
+    gap: 20px;
+}
+
+.hero {
+    height: 100vh;
 }
 
 .main>div {
@@ -134,12 +138,12 @@ input:focus {
 
 .main-text h3 {
     text-shadow: 0px 5px 4px rgba(0, 0, 0, 0.25);
-    font-size: 40px !important;
+    font-size: 50px !important;
     font-weight: 700;
 }
 
 .main-text h4 {
-    font-size: 30px !important;
+    font-size: 40px !important;
     font-weight: 700;
     text-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
 
@@ -148,6 +152,7 @@ input:focus {
 .sidebar {
     width: var(--sidebar-width);
     position: fixed;
+    top: 0;
     z-index: 10;
     background-color: var(--sidebar-background-color);
     height: 100vh;
@@ -269,7 +274,6 @@ input:focus {
 }
 
 .navbar>nav>ul {
-    margin: 20px 0 0 0;
     flex-direction: column;
     display: flex;
     align-items: left;
@@ -278,6 +282,7 @@ input:focus {
 .header {
     z-index: 20;
     width: calc(100% - var(--sidebar-width));
+    top: 0;
     right: 0;
     position: fixed;
     display: flex;
@@ -346,7 +351,6 @@ main {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    gap: 25px;
     width: 100% !important;
 }
 
@@ -396,7 +400,7 @@ main {
     font-weight: 500;
 }
 
-.selayang-padang>span{
+.selayang-padang>span {
     font-size: 30px;
 }
 
@@ -437,6 +441,10 @@ main {
     overflow: auto;
 }
 
+.history-date {
+    height: 100%;
+}
+
 .history h3 {
     border-bottom: 2px solid var(--text-white);
 }
@@ -473,7 +481,7 @@ main {
 
 .menu {
     margin: 10px 20px;
-    background: #FBD798;
+    background: var(--orange-100);
     padding: 10px;
     border: 3px solid #000;
     border-radius: 7px;
@@ -503,10 +511,6 @@ main {
     background-color: var(--slate-100);
 }
 
-.major>button:focus {
-    transition: 0.7s;
-    background-color: var(--slate-100);
-}
 
 .major>button.active {
     background-color: var(--slate-100);
@@ -563,12 +567,11 @@ main {
 }
 
 main.presensi {
-    max-width: 1100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 40px;
 }
 
 .card-2 {
@@ -589,7 +592,9 @@ main.presensi {
     padding: 10px 20px 20px 20px;
 }
 
-.card-2>div>p {
+.card-2>div>textarea {
+    width: 100%;
+    border: none;
     background-color: var(--gray-100);
     padding: 10px;
     border-radius: 10px;
@@ -748,8 +753,12 @@ table.table>tbody>tr>td>label {
     border: 1px solid black;
 }
 
-::backdrop {
-    background-color: rgba(0, 0, 0, 0.7);
+div::backdrop {
+    background-color: rgba(0, 0, 0, 0.7) !important;
+}
+
+dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.7) !important;
 }
 
 .modal-1>h3 {
@@ -775,8 +784,17 @@ table.table>tbody>tr>td>label {
 }
 
 dialog {
+    position: absolute;
+    z-index: 30;
     overflow: visible !important;
+    border: 1px solid black;
 }
+
+dialog[open] {
+    background-color: rgba(105, 105, 105, 0.34);
+    opacity: 1;
+}
+
 
 .modal-2 {
     background-color: transparent;
@@ -805,6 +823,7 @@ dialog {
 .modal-2>div>div>button {
     padding: 5px 10px;
     border-radius: 5px;
+    background-color: #F1F1F1;
 }
 
 .modal-3 {
@@ -875,6 +894,63 @@ dialog {
     gap: 10px;
 }
 
+.welcome-selayang {
+    justify-content: space-between;
+    height: 100%;
+}
+
+.container>div>button:focus>.user-dropdown {
+    display: block;
+}
+
+.user-dropdown:hover {
+    display: block;
+}
+
+.user-dropdown {
+    transition: all 300ms;
+    display: none;
+    background-color: #FFFFFF;
+    border: 1px solid #000000;
+    position: absolute;
+    right: 0;
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.user-dropdown h3 {
+    font-size: 20px;
+}
+
+.user-dropdown-content {
+    margin-top: 10px;
+    display: grid;
+    gap: 10px;
+    margin-right: 10px;
+}
+
+.user-dropdown-content a {
+    display: flex;
+    justify-content: end;
+    gap: 20px;
+    text-decoration: none;
+    color: black;
+    font-size: 1.1rem;
+    font-weight: 700;
+}
+
+.user-dropdown-content>form>a>input[type="submit"] {
+    background-color: transparent;
+    border: none;
+    font-size: 1.1rem;
+    font-weight: 700;
+}
+
+.header>.container>div>button {
+    background-color: transparent;
+    border: none;
+}
+
 @media (max-width: 500px) {
     .main-text {
         margin-bottom: 10px;
@@ -940,11 +1016,11 @@ dialog {
     }
 
     .hero {
-        height: 120vh;
+        height: 150vh !important;
     }
 
     .main {
-        margin-top: 7rem;
+        margin-top: 6rem;
         flex-direction: column;
     }
 
@@ -987,50 +1063,118 @@ dialog {
     .table>tbody>tr>td {
         padding: 0 10px;
     }
+
+    .main>div {
+        gap: 10px;
+    }
+
+    .main {
+        gap: 10px !important;
+    }
+
+    main>.d-flex {
+        height: auto !important;
+    }
 }
 
 @media (max-width: 375px) {
     .hero {
         background-position: center;
-        height: 150vh !important;
-    }
-
-    .main {
-        margin-top: 13rem;
+        height: 170vh !important;
     }
 
     .presensi {
         margin-top: 20px;
     }
+
+    main>.d-flex {
+        height: auto !important;
+    }
 }
 
 @media (max-width: 1370px) {
-    .main{
+    .hero {
+        height: 100vh;
+    }
+
+    .main {
         max-width: 1000px;
         gap: 30px;
     }
 
-    .welcome>span{
+    .welcome>span {
         font-size: inherit;
     }
 
-    .welcome>h3{
+    .welcome>h3 {
         font-size: 20px;
     }
 
-    .welcome>p{
+    .welcome>p {
         font-size: inherit;
     }
 
-    .selayang-padang>h3{
+    .selayang-padang>h3 {
         font-size: 20px;
     }
 
-    .selayang-padang>p{
+    .selayang-padang>p {
         font-size: inherit;
     }
+
+    .card-2 {
+        width: 900px !important;
+    }
+
+    main.presensi {
+        padding-top: 40px;
+        gap: 10px !important;
+    }
+
+    main.presensi>.button {
+        max-width: 900px !important;
+    }
+
+    div.main {
+        max-width: 900px;
+        max-height: 500px;
+        height: 65% !important;
+    }
+
+    main>.d-flex {
+        height: 100vh;
+    }
+}
+
+main>.d-flex {
+    height: 100vh;
+}
+
+main>.d-flex>.main {
+    height: 50%;
+}
+
+.presensi>.d-flex {
+    height: auto;
 }
 
 .sidebar-show {
     left: 0;
+}
+
+.menu-confirm {
+    background-color: var(--blue-200);
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-weight: 700;
+    margin: 0 20px 10px 20px;
+}
+
+td button {
+    background-color: transparent;
+    border: none;
+}
+
+td button:focus {
+    border: none;
 }
